# haystack-notion-demo

./: README.md  docker-compose.yml  index_notion_pages.py  requirements.txt  secrets.env
haystack-backend/: Dockerfile
notion_exporter_component/: custom_component.py
pipelines/: notion-search.haystack-pipeline.yml
ui/: Dockerfile  pyproject.toml  utils.py  webapp.py
