[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ui"
description = 'Minimal UI for Haystack (https://github.com/deepset-ai/haystack)'
requires-python = ">=3.7"
license = "Apache-2.0"

dependencies = [
    "streamlit",
    "requests",
]
dynamic = ["version"]

[tool.hatch.version]
path = "__about__.py"
